Fixed style of the footer. Now it goes to the bottom when the content is not big enough to fill the screen. Had to remove this styling when the screen is smaller. Added some checking before changing colors to admin-style. NEED to fix the text-align for the 3D editor

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,18 @@
 /*style.css*/
-body{
+/*body{
     background: white;
     margin:0px;
     padding:0px;
     height:100%;
-}
+}*/
+html{ height:100%; }
+body{ min-height:76%; padding:0; margin:0; position:relative; }
 
+footer{
+    position: absolute;
+    bottom: -190px;
+    text-align: left;
+}
 
 #quienes-somos{
     background: url('../img/banco.jpeg') center center no-repeat;
@@ -117,7 +124,7 @@ img{
     font-family: "Lato", sans-serif;
     font-size: 26px;
     color: #49a9b9;
-    padding: 10px;
+    padding: 45px;
 }
 .enlaces{
     color: rgba(255,255,255,0.4);
@@ -239,5 +246,9 @@ img{
     }
     #mymessage{
         top: 20%;
+    }
+    footer{
+        position: static;
+        text-align: center;
     }
 }
