--- a/static/css/styleloader.css
+++ b/static/css/styleloader.css
@@ -3,6 +3,7 @@ body {
 }
 #editor{
     color: black;
+    text-align: left !important;
 }
 
 .sidenav {
